Added additional property for Color sorting. Corrected for possible out of memory exception in multithreaded Asteroid builder. Changes to class names for clarity.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -319,6 +319,7 @@
                                                 <MultiBinding>
                                                     <Binding Path="ColorHue" />
                                                     <Binding Path="ColorSaturation" />
+                                                    <Binding Path="ColorLuminance" />
                                                 </MultiBinding>
                                             </controls:SortableGridViewColumn.SortBinding>
                                             <GridViewColumn.CellTemplate>
