Enhanced modding support (practically complete). Fixed 'Repair' missing player not creating new player in one step (later repair step was fixing it). Completely reworked the Api Interop class to split out functionality from loading SE assets. Enhanced Sandbox Content loader to recognise compressed .sbc files (during import). Rearranged menu items for new Merge menu. Fixed support for obsolete cubes (or missing mods) when viewing cubes in ships (and tested ability to replace obsolete cubes). Obsolete cubes are not removed from save content when saved with SEToolbox, they are retained. Texture reader will load .png files now. Updated to latest SE 01.039.011 binaries, and updated version.

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -77,7 +77,7 @@
                     </MenuItem>
                 </MenuItem>
                 <Separator Style="{StaticResource DockPanelSeparator}" />
-                <MenuItem Header="_Import" Command="{Binding ImportCommand}" Style="{StaticResource ToolBarTopMenuitem}">
+                <MenuItem Header="_Import" Command="{Binding IsActiveCommand}" Style="{StaticResource ToolBarTopMenuitem}">
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=import1}" />
                     </MenuItem.Icon>
@@ -107,7 +107,7 @@
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=export}" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="_Create" Command="{Binding ImportCommand}" Style="{StaticResource ToolBarTopMenuitem}">
+                <MenuItem Header="_Create" Command="{Binding IsActiveCommand}" Style="{StaticResource ToolBarTopMenuitem}">
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=package_add}" />
                     </MenuItem.Icon>
@@ -119,6 +119,21 @@
                     <MenuItem Header="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}">
                         <MenuItem.Icon>
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+                <MenuItem Header="_Merge" Command="{Binding IsActiveCommand}" Style="{StaticResource ToolBarTopMenuitem}">
+                    <MenuItem.Icon>
+                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=elements2}" />
+                    </MenuItem.Icon>
+                    <MenuItem Command="{Binding RejoinShipCommand}" Header="Rejoin Ship" ToolTip="Rejoins 2 parts from a broken ship back togeather">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=first_aid}"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Command="{Binding JoinShipPartsCommand}" Header="Join into Ship" ToolTip="Joins 2 foriegn parts to form a new ship">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=components}"/>
                         </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
@@ -205,16 +220,6 @@
                 <MenuItem Command="{Binding GroupMoveCommand}" Header="Group Move" Style="{StaticResource ToolBarTopMenuitem}">
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=fit_to_size}"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Command="{Binding RejoinShipCommand}" Header="Rejoin Ship" Style="{StaticResource ToolBarTopMenuitem}" ToolTip="Rejoins 2 parts from a broken ship back togeather">
-                    <MenuItem.Icon>
-                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=elements2}"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Command="{Binding JoinShipPartsCommand}" Header="Join into Ship" Style="{StaticResource ToolBarTopMenuitem}" ToolTip="Joins 2 foriegn parts to form a new ship">
-                    <MenuItem.Icon>
-                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=elements2}"/>
                     </MenuItem.Icon>
                 </MenuItem>
             </Menu>
